--- a/src/services/auth/pyproject.toml
+++ b/src/services/auth/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+acme-core = {git = "git@github.com:benfasoli/monorepo.git", subdirectory="src/packages/acme-core"}
 
 
 [build-system]
