--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,8 @@
 {
   "recommendations": [
+    "charliermarsh.ruff",
     "ms-python.python",
     "ms-python.vscode-pylance",
-    "ms-python.black-formatter",
-    "ms-python.isort",
-    "ms-python.pylint",
     "ms-python.mypy-type-checker"
   ]
 }
