--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,25 +1,16 @@
 {
-  "python.defaultInterpreterPath": ".venv/bin/python",
-  "python.testing.pytestEnabled": true,
-  "python.testing.pytestArgs": [
-    "-vv",
-    "."
-  ],
-  "[python]": {
-    "editor.defaultFormatter": "ms-python.black-formatter",
-    "editor.codeActionsOnSave": {
-      "source.organizeImports": "always"
-    },
-    "editor.formatOnSave": true,
-    "editor.rulers": [
-      88
-    ]
-  },
-  "isort.importStrategy": "fromEnvironment",
   "mypy-type-checker.importStrategy": "fromEnvironment",
   "mypy-type-checker.reportingScope": "workspace",
-  "pylint.importStrategy": "fromEnvironment",
-  "yaml.schemas": {
-    "https://json.schemastore.org/github-workflow.json": "file://.github/workflows/deploy.yaml"
+  "python.defaultInterpreterPath": ".venv/bin/python",
+  "python.testing.pytestEnabled": true,
+  "python.testing.pytestArgs": ["-vv", "."],
+  "[python]": {
+    "editor.codeActionsOnSave": {
+      "source.fixAll": "never",
+      "source.organizeImports": "explicit"
+    },
+    "editor.defaultFormatter": "charliermarsh.ruff",
+    "editor.formatOnSave": true,
+    "editor.rulers": [88]
   }
 }
