--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,6 @@
   "recommendations": [
     "charliermarsh.ruff",
     "ms-python.python",
-    "ms-python.vscode-pylance",
-    "ms-python.mypy-type-checker"
+    "ms-python.vscode-pylance"
   ]
 }
