--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
-  "mypy-type-checker.importStrategy": "fromEnvironment",
-  "mypy-type-checker.reportingScope": "workspace",
   "python.defaultInterpreterPath": ".venv/bin/python",
+  "python.analysis.extraPaths": ["**/src"],
   "python.testing.pytestEnabled": true,
   "python.testing.pytestArgs": ["-vv", "."],
   "[python]": {
