--- a/services/worker/Dockerfile
+++ b/services/worker/Dockerfile
@@ -1,28 +1,27 @@
 FROM python:3.12-slim-bookworm
 
-ARG SERVICE_NAME=api
+ENV SERVICE_NAME=worker
 ENV SERVICE_ROOT=services/${SERVICE_NAME}
-ENV PORT=8080
-ENV PYTHONUNBUFFERED=1
-ENV TZ=UTC
-
 
 WORKDIR /app
+
+RUN apt-get update -y && \
+    apt-get install -y --no-install-recommends build-essential && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 COPY . .
 RUN --mount=from=ghcr.io/astral-sh/uv:0.2.37,source=/uv,target=/bin/uv \
     uv sync \
     --no-cache \
     --no-dev \
-    --frozen \
+    --locked \
     --python=/usr/local/bin/python \
     --package=${SERVICE_NAME}
 
 # TODO: install uv dependencies to system environment once supported
 #   https://github.com/astral-sh/uv/issues/5964
-ENV PATH="${PATH}:.venv/bin"
+ENV PATH=".venv/bin:${PATH}"
 
-CMD uvicorn src.main:app \
-    --app-dir=${SERVICE_ROOT} \
-    --host=0.0.0.0 \
-    --port=${PORT}
+ENV PYTHONPATH=${SERVICE_ROOT}
+CMD python -m src.worker
