--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,8 @@
 typeCheckingMode = "strict"
 
 [tool.pytest.ini_options]
-addopts = [
-    "--import-mode=importlib",
-]
+asyncio_mode = "auto"
+addopts = ["--import-mode=importlib"]
 testpaths = [
     "packages/*/tests",
     "services/*/tests"
@@ -24,6 +23,7 @@ known-first-party = ["lib"]
 dev-dependencies = [
     "pyright ~= 1.1",
     "pytest ~= 8.3",
+    "pytest-asyncio ~= 0.23",
     "pytest-cov ~= 5.0",
     "ruff ~= 0.6",
 ]
