--- a/services/api/pyproject.toml
+++ b/services/api/pyproject.toml
@@ -4,13 +4,15 @@ version = "0.0.0"
 requires-python = "~=3.12"
 dependencies = [
     "lib-core",
-    "litestar ~= 2.7",
+    "fastapi ~= 0.112",
+    "pydantic ~= 2.8",
     "uvicorn ~= 0.27",
 ]
 
 [tool.uv]
 dev-dependencies = [
     "python-dotenv[cli] ~= 1.0",
+    "httpx ~= 0.27"
 ]
 
 [tool.uv.sources]
