--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,13 @@ typeCheckingMode = "strict"
 asyncio_mode = "auto"
 addopts = ["--import-mode=importlib"]
 testpaths = [
-    "packages/*/tests",
-    "services/*/tests"
+    "libs/*/tests",
+    "apps/*/tests"
 ]
 
 [tool.ruff]
 target-version = "py312"
-src = ["packages", "services"]
+src = ["libs", "apps"]
 
 [tool.ruff.lint]
 select = ["E", "F", "UP", "B", "SIM", "I"]
@@ -30,6 +30,6 @@ dev-dependencies = [
 
 [tool.uv.workspace]
 members = [
-    "packages/*",
-    "services/*",
+    "libs/*",
+    "apps/*",
 ]
