--- a/src/lib-dtos/pyproject.toml
+++ b/src/lib-dtos/pyproject.toml
@@ -1,8 +1,10 @@
 [project]
-name = "lib.core"
+name = "lib.dtos"
 version = "0.0.0"
-requires-python = "~=3.12"
-dependencies = []
+requires-python = "~=3.13.0"
+dependencies = [
+    "pydantic ~= 2.8",
+]
 
 [tool.uv]
 dev-dependencies = []
