--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,13 @@ typeCheckingMode = "strict"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
-addopts = ["--import-mode=importlib"]
-testpaths = [
-    "libs/*/tests",
-    "apps/*/tests"
-]
+asyncio_default_fixture_loop_scope = "function"
+addopts = ["--import-mode=importlib", "-vv"]
+testpaths = ["src/*/tests"]
 
 [tool.ruff]
 target-version = "py312"
-src = ["libs", "apps"]
+src = ["src/"]
 
 [tool.ruff.lint]
 select = ["E", "F", "UP", "B", "SIM", "I"]
@@ -28,8 +26,9 @@ dev-dependencies = [
     "ruff ~= 0.6",
 ]
 
+[tool.uv.sources]
+lib-core = { workspace = true }
+lib-dtos = { workspace = true }
+
 [tool.uv.workspace]
-members = [
-    "libs/*",
-    "apps/*",
-]
+members = ["src/*"]
