--- a/src/api/pyproject.toml
+++ b/src/api/pyproject.toml
@@ -1,21 +1,19 @@
 [project]
-name = "worker"
+name = "api"
 version = "0.0.0"
-requires-python = "~=3.12"
+requires-python = "~=3.13.0"
 dependencies = [
     "lib-core",
-    "lib-dtos",
-    "uvloop ~= 0.20"
+    "fastapi ~= 0.112",
+    "pydantic ~= 2.8",
+    "uvicorn ~= 0.27",
 ]
 
 [tool.uv]
 dev-dependencies = [
     "python-dotenv[cli] ~= 1.0",
+    "httpx ~= 0.27"
 ]
-
-[tool.uv.sources]
-lib-core = { workspace = true }
-lib-dtos = { workspace = true }
 
 [build-system]
 requires = ["pdm-backend"]
