--- a/src/worker/pyproject.toml
+++ b/src/worker/pyproject.toml
@@ -1,22 +1,16 @@
 [project]
-name = "api"
+name = "worker"
 version = "0.0.0"
-requires-python = "~=3.12"
+requires-python = "~=3.13.0"
 dependencies = [
     "lib-core",
-    "fastapi ~= 0.112",
-    "pydantic ~= 2.8",
-    "uvicorn ~= 0.27",
+    "lib-dtos",
 ]
 
 [tool.uv]
 dev-dependencies = [
     "python-dotenv[cli] ~= 1.0",
-    "httpx ~= 0.27"
 ]
-
-[tool.uv.sources]
-lib-core = { workspace = true }
 
 [build-system]
 requires = ["pdm-backend"]
