--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -19,6 +19,4 @@ RUN --mount=from=ghcr.io/astral-sh/uv:0.5.29,source=/uv,target=/bin/uv \
 ENV PATH=".venv/bin:${PATH}"
 ENV PYTHONPATH=${SERVICE_ROOT}
 
-CMD uvicorn src.api.main:app \
-    --host=0.0.0.0 \
-    --port=${PORT}
+CMD ["uvicorn", "src.api.main:app", "--host=0.0.0.0", "--port=${PORT}"]
