--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,16 +12,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install uv
+      - name: Install uv 🐍
         uses: astral-sh/setup-uv@v5
         with:
-          version: "0.5.29"
+          version: "0.7.3"
           enable-cache: true
 
-      - name: Install python
+      - name: Install python 🐍
         run: uv python install
 
-      - name: Install python dependencies
+      - name: Install python dependencies 🐍
         run: uv sync --locked
 
       - name: Lint 🔬
