--- a/src/api/pyproject.toml
+++ b/src/api/pyproject.toml
@@ -3,18 +3,15 @@ name = "api"
 version = "0.0.0"
 requires-python = "~=3.13.0"
 dependencies = [
-    "lib-core",
+    "core",
     "fastapi ~= 0.112",
     "pydantic ~= 2.8",
     "uvicorn ~= 0.27",
 ]
 
-[tool.uv]
-dev-dependencies = [
-    "python-dotenv[cli] ~= 1.0",
-    "httpx ~= 0.27"
-]
+[dependency-groups]
+dev = ["python-dotenv[cli] ~= 1.0", "httpx ~= 0.27"]
 
 [build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
+requires = ["uv_build>=0.7.3,<0.8.0"]
+build-backend = "uv_build"
