--- a/src/api/pyproject.toml
+++ b/src/api/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "api"
 version = "0.0.0"
-requires-python = "~=3.13.0"
+requires-python = "~=3.14.0"
 dependencies = [
     "core",
     "fastapi ~= 0.112",
@@ -10,8 +10,8 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = ["python-dotenv[cli] ~= 1.0", "httpx ~= 0.27"]
+dev = ["httpx"]
 
 [build-system]
-requires = ["uv_build>=0.7.3,<0.8.0"]
+requires = ["uv_build>=0.10.2,<0.11.0"]
 build-backend = "uv_build"
