--- a/src/worker/pyproject.toml
+++ b/src/worker/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "worker"
 version = "0.0.0"
-requires-python = "~=3.13.0"
+requires-python = "~=3.14.0"
 dependencies = ["core", "dtos"]
 
 [dependency-groups]
-dev = ["python-dotenv[cli] ~= 1.0"]
+dev = []
 
 [build-system]
-requires = ["uv_build>=0.7.3,<0.8.0"]
+requires = ["uv_build>=0.10.2,<0.11.0"]
 build-backend = "uv_build"
